Atualização Final do Desafio, Add dos testse que faltavam e atualização do README

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,40 @@
-image: markhobson/maven-chrome
+stages:
+  - test
 
-cache:
-  paths:
-    - target/
-
-build&test:
-  stage: build
+test:
+  stage: test
+  tags:
+    - shell
   script:
-    - mvn dependency:go-offline
-    - mvn package
+    - echo "Teste Automatico"
+    - powershell mvn clean
+    - powershell mvn test
 
 
+##############################
+#Teste CI com BD
+##############################
+#image: maven:latest
+
+#services:
+#  - name: mariadb
+
+#variables:
+  #Configure mysql service (https://hub.docker.com/_/mysql/)
+#  MYSQL_ROOT_PASSWORD: root
+#  MYSQL_DATABASE: bugtracker
+#  MYSQL_USER: mantisbt
+#  MYSQL_PASSWORD: mantisbt
+
+#connect:
+#  image: mariadb
+
+#  script:
+#    - echo "SELECT 'OK';"
+#stages:
+#  - test
+
+#test:
+#  stage: test
+#  script:
+#    - mvn test
